--- a/Pokedex/Info.plist
+++ b/Pokedex/Info.plist
@@ -45,5 +45,10 @@
 	<array>
 		<string>pokeFont.ttf</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+	<dict>
+		<key>NSAllowsArbitraryLoads</key>
+		<true/>
+	</dict>
 </dict>
 </plist>
